# ems-backend

./: .gitignore  Cargo.toml  docker-compose.yaml  makefile
docker/app/: Dockerfile  entrypoint.sh
profiles/staging/: env.database
schema/: dev-dump.sql  init-data.sql  init-db.sql  triggers.sql
src/: main.rs
src/shared/: database.rs  mod.rs  response.rs
