[package]
name = "ems-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
